--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "sass --watch scss/main.scss css/style.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alexandre Chirol",
